RT-30657 Gradle: web compilation needs to move to rt/build.gradle